<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/white">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="16sp"
            android:textColor="#9C9C9C"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#9C9C9C"/>
    <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:hint="@string/email"
            android:textColorHint="#9C9C9C"/>
    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:maxLength="50"
            android:textColor="@android:color/black"
            android:hint="@string/password"
            android:textColorHint="#9C9C9C"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#9C9C9C"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">
        <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:background="@drawable/home_up_bg"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>
        <View android:layout_width="1px"
              android:layout_height="match_parent"
              android:background="#9C9C9C"/>
        <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_up_bg"
                android:gravity="center"
                android:text="@string/confirm"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>
    </LinearLayout>
</LinearLayout>